@@ -30,6 +30,8 @@ Release 2.8.0 - UNRELEASED
     MAPREDUCE-5485. Allow repeating job commit by extending OutputCommitter API
     (Junping Du via jianhe)
 
+    MAPREDUCE-4785. TestMRApp occasionally fails (haibochen via rkanter)
+
     MAPREDUCE-6619. HADOOP_CLASSPATH is overwritten in MR container.
     (Junping Du via jianhe)
 
